to: 探索工厂模式

--- a/_posts/2024-09-07-探索工厂模式.md
+++ b/_posts/2024-09-07-探索工厂模式.md
@@ -62,7 +62,7 @@ public interface IdGenerator {
 获取多种类型的 ID 时，使用如下方法。
 
 ```java
-Id getId(Integer idType) {
+public Id getId(Integer idType) {
     IdGenerator idGenerator;
 
     //region 第一部分
@@ -82,6 +82,52 @@ Id getId(Integer idType) {
 }
 ```
 
-当新类型的 ID 生成器需要添加时，显然第一部分需要调整，而第二部分是不需要改动的，所以，第一部分是可能变化之处，而第二部分是不变之处。因此，我们需要将第一部分独立出来。
+当新类型的 ID 生成器需要添加时，显然第一部分需要调整，而第二部分是不需要改动的。所以，第一部分是可能变化之处，而第二部分是不变之处。因此，我们需要将第一部分独立出来。
+
+```java
+public class IdGeneratorFactory {
+    public IdGenerator createIdGenerator(Integer idType) {
+        if (Objects.equals(idType, IdTypeEnum.Simple.getCode())) {
+            idGenerator = new SimpleIdGenerator();
+        } else if (Objects.equals(idType, IdTypeEnum.TypeA.getCode())) {
+           idGenerator = new TypeAIdGenerator();
+        } else {
+            idGenerator = new TypeZIdGenerator();
+        }
+    }
+}
+```
+
+表面来看，我们只是把相同的代码搬进了一个单独的类，难以维护的问题并没有得到解决。实际上，我们将生产 IdGenerator 的方法单独维护到了这个类中，我们不必每次创建 IdGenerator 的时候都复制一份 `if else` 的冗长代码。
+
+我们使用 IdGeneratorFactory 对刚才的代码进行重构。
+
+```java
+public class SomeClass {
+    
+    private final IdGeneratorFactory factory;
+
+    public SomeClass(IdGeneratorFactory factory) {
+        this.factory = factory; 
+    }
+
+    public Id getId(Integer idType) {
+        IdGenerator idGenerator;
+
+        //region 第一部分(已优化)
+        idGenerator = factory.createIdGenerator(idType);
+        //endregion
+
+        //region 第二部分
+        Context context = idGenerator.buildContext();
+        return idGenerator.generate(context);
+        //endregion
+    }
+} 
+```
+
+如上，我们就完成了一个“简单工厂”，但是遗憾的是“简单工厂”并不能算是一个设计模式，可以说是一种编程习惯。就让“简单工厂”来为我们引入接下来真正的工厂模式吧！
+
+## 工厂方法
 
 
